# arcos-gui

./: .gitignore  .pre-commit-config.yaml  20230206_arcos_output_arcos_params.csv  404.html  LICENSE  MANIFEST.in  README.md  arcos_data.csv  dock_widgets.py.lprof  index.html  install_ARCOS.r  install_r_packages.r  mkdocs.yml  setup.cfg  sitemap.xml  test_params.yaml  tox.ini
.github/workflows/: test_and_deploy.yml
Contributing/: index.html
Installation/: index.html
Usage/: index.html
docs/: Contributing.md  Documentation.md  Installation.md  Usage.md
search/: search_index.json
src/arcos_gui/: __init__.py  __main__.py  _arcos_widget.py  _arcos_widgets.py  _arcos_wrapper.py  _export_parameters.py  _exporting_widget.py  _filter_widget.py  _helper_functions.py  _input_data_widget.py  _layer_data_tuple.py  _layer_maker.py  _loading_functions.py  _main_widget.py  _plot_widgets.py  _plots.py  _preprocessing_utils.py  _sample_data.py  _ui_util_func.py  _visualization_settings_widget.py  arcos_module.py  bbox.ipynb  data_module.py  dock_widgets.py  export_movie.py  magic_guis.py  napari.yaml  plot_dialog.py  shape_functions.py  temp_data_storage.py
src/arcos_gui/_tests/: dock_widgets.py  test_arcos_module.py  test_arcos_widgets.py  test_data_module.py  test_export_movie.py  test_helper_functions.py  test_main_widget.py  test_sample_data.py  test_shape_funtions.py  test_temp_data_storage.py
src/arcos_gui/_tests/fixtures/: arcos_data.csv  arcos_data_2.csv  dataframe1.csv  filter_test.csv
src/arcos_gui/_tests/test_data/: arcos_output.csv  arcos_test.csv  arcos_test_meas_math.csv  comma_separated.csv  data_clTrackID.csv  semicolon_separated.csv  tab_separated.csv
src/arcos_gui/_tests/test_layerutils/: test_layer_data_tuple.py  test_layermaker.py  test_layermaker.py.2d4c41b454c85b78c7319959968f0564.tmp
src/arcos_gui/_tests/test_processing/: test_arcos_wrapper.py  test_data_storage.py  test_preprocessing_utils.py
src/arcos_gui/_tests/test_tools/: test_image_sequence_export.py  test_plots.py  test_shape_funtions.py  test_ui_util_functions.py
src/arcos_gui/_tests/test_widgets/: test_arcos_widget.py  test_bottom_bar_widget.py  test_dialog_widgets.py  test_export_widget.py  test_filter_widget.py  test_input_data_widget.py  test_plot_widget.py  test_visualization_settings_widget.py
src/arcos_gui/_ui/: ARCOS_widget.ui  ARCOS_widget_backup.ui  Input_data.ui  Layer_properties.ui  data_plot_dialog.ui  export_widget.ui  filter_data.ui  main_widget.ui  plot_dialog.ui  plot_widget.ui
src/arcos_gui/layerutils/: __init__.py  _layer_data_tuple.py  _layer_maker.py
src/arcos_gui/processing/: __init__.py  _arcos_wrapper.py  _data_storage.py  _preprocessing_utils.py
src/arcos_gui/sample_data/: __init__.py  _sample_data.py  arcos_data.csv  arcos_data_2.csv
src/arcos_gui/tools/: __init__.py  _config.py  _image_sequence_export.py  _plots.py  _sample_data.py  _shape_functions.py  _ui_util_func.py
src/arcos_gui/widgets/: __init__.py  _arcos_widget.py  _bottom_bar_widget.py  _dialog_widgets.py  _exporting_widget.py  _filter_widget.py  _input_data_widget.py  _main_widget.py  _plot_widgets.py  _visualization_settings_widget.py
