[metadata]
name = arcos-gui
version = 0.0.1
author = Benjamin Grädel
author_email = benjamin.graedel@unibe.ch
url = https://github.com/githubuser/arcos-gui
license = BSD-3-Clause
description = A simple plugin to use with napari
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/githubuser/arcos-gui/issues
    Documentation = https://github.com/githubuser/arcos-gui#README.md
    Source Code = https://github.com/githubuser/arcos-gui
    User Support = https://github.com/githubuser/arcos-gui/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.7
package_dir =
    =src

# add your package requirements here
install_requires =
    numpy
    pandas
    rpy2
    napari>=0.4.14
    magicgui >=0.3.0
    scipy
    matplotlib
    scikit-image

[options.packages.find]
where = src

[options.package_data]
arcos-gui = 
    napari.yaml

[options.entry_points] 
napari.manifest = 
    arcos-gui = arcos_gui:napari.yaml
