[metadata]
name = arcos-gui
version = 0.0.1
description = A napari plugin to interact with the ARCOS package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bgraedel/arcos-gui
author = Benjamin Grädel
author_email = benjamin.graedel@unibe.ch
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Testing
project_urls =
    Bug Tracker = https://github.com/bgraedel/arcos-gui/issues
    Documentation = https://github.com/bgraedel/arcos-gui#README.md
    Source Code = https://github.com/bgraedel/arcos-gui
    User Support = https://github.com/bgraedel/arcos-gui/issues

[options]
packages = find:
install_requires =
    magicgui>=0.3.0
    matplotlib
    napari>=0.4.14
    numpy >=1.22.2
    pandas >= 1.4.1
    rpy2 >= 3.4.5
    scikit-image >=0.19.1
    scipy >=1.8.0
python_requires = >=3.7
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    arcos-gui = arcos_gui:napari.yaml

[options.extras_require]
testing =
    pyqt5
    pytest
    pytest-qt

[options.package_data]
arcos_gui =
    napari.yaml

[tool:pytest]
addopts = -v
filterwarnings =
    ignore::DeprecationWarning:ipykernel

[isort]
profile = black
src_paths = arcos_gui

[flake8]
exclude = _version.py,.eggs,examples
max-line-length = 88
docstring-convention = numpy
ignore = D100, D213, D401, D413, D107, W503, E203
per-file-ignores =
    _tests/*.py:D

[check-manifest]
ignore =
    arcos_gui/_version.py
    .pre-commit-config.yaml
    launch-dev.py
    tox.ini
    codecov.yml
