[metadata]
name = arcos_gui
version = 0.1.0
description = A napari plugin to detect and visualize collective signaling events
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bgraedel/arcos-gui
author = Benjamin Grädel
author_email = benjamin.graedel@unibe.ch
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Testing
project_urls =
    Bug Tracker = https://github.com/bgraedel/arcos-gui/issues
    Documentation = https://bgraedel.github.io/arcos-gui/
    Source Code = https://github.com/bgraedel/arcos-gui
    User Support = https://github.com/bgraedel/arcos-gui/issues

[options]
packages = find:
install_requires =
    arcos4py>=0.2.2
    matplotlib>=3.3.4
    napari>=0.4.14
    numpy>=1.21.5
    pandas>=1.3.5
    pyarrow>=11.0.0
    scikit-image>=0.18.1
    scipy>=1.7.3
python_requires = >=3.8
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    arcos-gui = arcos_gui:napari.yaml

[options.extras_require]
doc =
    mkdocs
    mkdocs-include-markdown-plugin
    mkdocs-material
    mkdocs-material-extensions
testing =
    pyqt5
    pytest
    pytest-mock
    pytest-qt

[options.package_data]
arcos_gui =
    napari.yaml

[tool:pytest]
addopts = -v
filterwarnings =
    ignore::DeprecationWarning:ipykernel

[isort]
profile = black
src_paths = arcos_gui

[flake8]
exclude = _version.py,.eggs, setup.cfg
max-line-length = 120
docstring-convention = numpy
ignore = D100, D213, D401, D413, D107, W503, E203
per-file-ignores =
    _tests/*.py:D
    _version.py:D
    *.pyi:D

[check-manifest]
ignore =
    arcos_gui/_version.py
    .pre-commit-config.yaml
    launch-dev.py
    tox.ini
    codecov.yml
